Skip execution of maven-easyb-pluginsecond updayte

--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,9 @@
                 <groupId>org.easyb</groupId>
                 <artifactId>maven-easyb-plugin</artifactId>
                 <version>1.4</version>
+                <configuration>
+                   <skip>true</skip>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
