--- a/pom.xml
+++ b/pom.xml
@@ -6,36 +6,83 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.wakaleo.gameoflife</groupId>
-    <artifactId>gameoflife</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <!-- ===================== -->
+    <!-- Parent -->
+    <!-- ===================== -->
+    <parent>
+        <groupId>com.wakaleo.gameoflife</groupId>
+        <artifactId>gameoflife</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 
-    <name>gameoflife</name>
-    <url>https://github.com/wakaleo/game-of-life</url>
+    <!-- ===================== -->
+    <!-- Project Info -->
+    <!-- ===================== -->
+    <artifactId>gameoflife-web</artifactId>
+    <packaging>war</packaging>
+    <name>Game of Life - Web</name>
 
     <!-- ===================== -->
     <!-- Properties -->
     <!-- ===================== -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <sourceJdk>1.8</sourceJdk>
-        <targetJdk>1.8</targetJdk>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <!-- ===================== -->
-    <!-- SCM -->
+    <!-- Dependencies -->
     <!-- ===================== -->
-    <scm>
-        <connection>scm:git:https://github.com/wakaleo/game-of-life.git</connection>
-        <developerConnection>scm:git:https://github.com/wakaleo/game-of-life.git</developerConnection>
-        <url>https://github.com/wakaleo/game-of-life</url>
-    </scm>
+    <dependencies>
+
+        <!-- Core module -->
+        <dependency>
+            <groupId>com.wakaleo.gameoflife</groupId>
+            <artifactId>gameoflife-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <!-- Servlet API -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- JSP -->
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>javax.servlet.jsp-api</artifactId>
+            <version>2.3.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- JSTL -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+        <!-- Test deps (kept but NOT executed) -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
 
     <!-- ===================== -->
     <!-- Build -->
     <!-- ===================== -->
     <build>
+        <finalName>gameoflife-web</finalName>
+
         <plugins>
 
             <!-- Compiler -->
@@ -48,78 +95,24 @@
                 </configuration>
             </plugin>
 
-            <!-- ❌ SUREFIRE DISABLED (LEGACY + JAVA INCOMPATIBLE) -->
+            <!-- WAR plugin -->
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.2</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+
+            <!-- ❌ SERENITY / THUCYDIDES DISABLED -->
             <!--
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.11</version>
+                <groupId>net.serenity-bdd.maven.plugins</groupId>
+                <artifactId>serenity-maven-plugin</artifactId>
             </plugin>
             -->
-
-            <!-- ❌ JACOCO DISABLED -->
-            <!--
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-            </plugin>
-            -->
-
-            <!-- ❌ EASYB DISABLED -->
-            <!--
-            <plugin>
-                <groupId>org.easyb</groupId>
-                <artifactId>maven-easyb-plugin</artifactId>
-                <version>1.4</version>
-            </plugin>
-            -->
-
-            <!-- Release -->
-            <plugin>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.5</version>
-            </plugin>
-
-            <!-- Deploy -->
-            <plugin>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.2</version>
-            </plugin>
 
         </plugins>
     </build>
-
-    <!-- ===================== -->
-    <!-- Dependencies (Tests kept but not executed) -->
-    <!-- ===================== -->
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
-            <version>1.3</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>1.9.0</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
-    <!-- ===================== -->
-    <!-- Modules -->
-    <!-- ===================== -->
-    <modules>
-        <module>gameoflife-build</module>
-        <module>gameoflife-core</module>
-        <module>gameoflife-web</module>
-    </modules>
 
 </project>
